--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<h1><%= @cocktail.name %></h1>
+
+<h2>List of ingredients</h2>
+<ul class="list"></ul>
+<% @cocktail.doses.each do |dose| %>
+<li>
+<%= dose.description %> of <%= dose.ingredient.name %>
+<%= link_to "Remove this dose", dose_path(id: dose.id), method: :delete %>
+</li>
+<% end %>
+
+<%= link_to 'Back', cocktails_path %>
+
