--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,11 @@
 @import "config/colors";
 @import "config/bootstrap_variables";
 
-// External libraries
-// @import "bootstrap-sprockets";
-// @import "bootstrap";
-// @import "font-awesome-sprockets";
-// @import "font-awesome";
+//External libraries
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 // Your CSS partials
 @import "layouts/index";
