--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,37 @@
-<h1>Your list of cocktails</h1>
-<h2>
-<% @cocktails.each do |cocktail| %>
-<%= link_to cocktail.name, cocktail_path(id: cocktail.id) %>
-<% end %>
-</h2>
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'banner-cocktail.jpg'%>');">
+    <div class="banner-content">
+      <h1>Mr. Cocktail</h1>
+      <p>Your favourite drinks in one place</p>
+      <%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary btn-lg"} %>
+    </div>
+  </div>
 
-<%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary"} %>
+  <div class="container">
+    <div class="container-header">
+    <h1>Your list of cocktails</h1>
+    <h3>Number of cocktails: <%= @cocktails.count %></h3>
+</div>
+    <div class="row">
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-xs-12 col-sm-4">
+        <!-- insert <div class="card"> -->
+          <div class="card">
+            <div class="card-header">
+            <p><%= link_to cocktail.name, cocktail_path(id: cocktail.id) %></p>
+            <!-- image will be here -->
+            </div>
+         </div>
+    </div>
+        <% end %>
+      </div>
+
+      <div class="col-xs-12 col-sm-4">
+        <!-- insert <div class="card"> -->
+      </div>
+      <div class="container-footer">
+        <%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary btn-lg"} %>
+      </div>
+    </div>
+
+
+
