--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,33 +1,68 @@
 // Specific CSS for your home-page
 .banner {
-  color: white;
   text-align: center;
-  height: 100vh;
+  height: 100vh-10vh;
   background-size: cover !important;
+  background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-position: right 0px bottom 2px;
+  h1 {
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+  p {
+    font-size: 25px;
+    font-weight: lighter;
+    color: #2d2d2d;
+    opacity: 0.6;
+    margin-bottom: 30px;
+ }
 }
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-.banner p {
-  font-size: 25px;
-  font-weight: lighter;
-  color: rgb(255, 255, 255);
-  opacity: 0.6;
+
+.container {
   margin-bottom: 30px;
 }
 
 .container-header {
   text-align: center;
+  margin-bottom: 50px;
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 20px;
+  }
 }
 
 .card {
-  flex: 1 1 50%;
+  height: 200px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
   position: relative;
-  border: 1px solid #efefef;
-  box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  &:hover {
+    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.55);
+  }
+}
+
+.card-description {
+  position: absolute;
+  font-size: 20px;
+  bottom: 10px;
+  left: 10px;
+}
+
+.container-footer {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+#logo {
+  height: 150px;
 }
