--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,37 +1,47 @@
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'banner-cocktail.jpg'%>');">
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(250,245,255,0.4) 0%, rgba(250,245,255,0.3) 50%), url('<%= image_path 'banner-cocktail.jpg'%>');">
     <div class="banner-content">
+      <%= image_tag 'mr.cocktail.png', id: "logo" %>
       <h1>Mr. Cocktail</h1>
       <p>Your favourite drinks in one place</p>
-      <%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary btn-lg"} %>
+      <%= link_to "Add cocktail", new_cocktail_path, {class: "btn btn-primary btn-lg"} %>
     </div>
   </div>
 
   <div class="container">
+
     <div class="container-header">
-    <h1>Your list of cocktails</h1>
-    <h3>Number of cocktails: <%= @cocktails.count %></h3>
-</div>
+      <h1>All cocktails <i class="fa fa-level-down" aria-hidden="true"></i></h1>
+      <h3><%= @cocktails.count %> <i class="fa fa-glass" aria-hidden="true"></i></h3>
+    </div>
+
     <div class="row">
       <% @cocktails.each do |cocktail| %>
-        <div class="col-xs-12 col-sm-4">
-        <!-- insert <div class="card"> -->
-          <div class="card">
-            <div class="card-header">
-            <p><%= link_to cocktail.name, cocktail_path(id: cocktail.id) %></p>
-            <!-- image will be here -->
-            </div>
-         </div>
-    </div>
+          <div class="col-xs-12 col-sm-4">
+            <% if cocktail.photos.empty? %>
+              <% photo_url = "https://unsplash.com/photos/dmkmrNptMpw" %>
+            <% else %>
+
+                <% photo_url = cl_image_path cocktail.photos.first.path, height: 500, width: 400, crop: :fit  %>
+            <% end %>
+
+            <%= link_to cocktail_path(id: cocktail.id) do %>
+              <div class="card" style="background-image: url('<%= photo_url %>')">
+                <div class="card-description">
+                  <%= cocktail.name.upcase %>
+                </div>
+              </div>
+
+            <% end %>
+
+          </div>
+
+
         <% end %>
-      </div>
-
-      <div class="col-xs-12 col-sm-4">
-        <!-- insert <div class="card"> -->
-      </div>
-      <div class="container-footer">
-        <%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary btn-lg"} %>
-      </div>
     </div>
 
+    <div class="container-footer">
+      <%= link_to "New cocktail", new_cocktail_path, {class: "btn btn-primary btn-sm"} %>
+    </div>
 
+  </div>
 
