--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,17 +1,20 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1><%= @cocktail.name %></h1>
 
-      <h2>List of ingredients </h2>
-      <ul class="list">
-      <% @cocktail.doses.each do |dose| %>
-        <li>
-          <%= dose.description %> of <%= dose.ingredient.name %>
-          <%= link_to "Remove this dose", dose_path(id: dose.id), method: :delete %>
-        </li>
+<div class="container">
+  <div class="wrap">
+    <div class="container-content">
+      <h1><%= @cocktail.name %></h1>
+      <% @cocktail.photos.each do |photo| %>
+      <%= cl_image_tag photo.path, width: 300, height: 200, crop: :fill %>
       <% end %>
-      </ul>
+
+      <h2>Doses</h2>
+      <h3><% @cocktail.doses.each do |dose| %></h3>
+      <h3><%= dose.description %> of <%= dose.ingredient.name %></h3>
+      <p><%= link_to "Remove this dose", dose_path(id: dose.id), method: :delete %></p>
+      <% end %>
+    </div>
+
+    <div class="container-links">
       <div>
         <%= link_to "Add a new dose", new_cocktail_dose_path(cocktail_id: @cocktail.id) %>
       </div>
@@ -19,3 +22,4 @@
     </div>
   </div>
 </div>
+
