--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,20 +1,33 @@
-.container {
-  position: relative;
-}
-
-.wrap {
+.container-content {
   margin: 20px;
   padding: 20px;
-  text-align: center;
-  h1 {
+}
+ h1 {
     font-size: 30px;
   }
   h2 {
     font-size: 25px;
   }
   h3 {
-     font-size: 20px;
-  }
+   font-size: 20px;
+ }
+
+
+#pure-table {
+ text-align: left;
+ td {
+  padding: 10px;
+}
 }
 
+#remove {
+  font-size: 15px;
+}
 
+.wrap {
+text-align: center;
+}
+
+#pure-table {
+  margin: 0 auto;
+}
