--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>RailsMisterCocktail</title>
-    <%= csrf_meta_tags %>
+  <title>RailsMisterCocktail</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= cloudinary_js_config %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= cloudinary_js_config %>
+</head>
 
-  <body>
-    <%= render 'layouts/navbar' unless @disable_nav %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
-  </body>
+<body>
+ <% if flash[:notice] %>
+ <div class="alert alert-info fade in">
+  <button class="close" data-dismiss="alert">×</button>
+  <%= flash[:notice] %>
+</div>
+<% end %>
+
+<% if flash[:alert] %>
+<div class="alert alert-error fade in">
+  <button class="close" data-dismiss="alert">×</button>
+  <%= flash[:alert] %>
+</div>
+<% end %>
+<%= render 'layouts/navbar' unless @disable_nav %>
+<%= yield %>
+<%= render 'layouts/footer' %>
+</body>
 </html>
