--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .banner {
   text-align: center;
-  height: 100vh-10vh;
+  height: 100vh;
   background-size: cover !important;
   background-repeat: no-repeat;
   display: flex;
@@ -22,10 +22,6 @@
  }
 }
 
-.container {
-  margin-bottom: 30px;
-}
-
 .container-header {
   text-align: center;
   margin-bottom: 50px;
@@ -39,6 +35,7 @@
 
 .card {
   height: 200px;
+  width: 100%;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-repeat: no-repeat;
   background-position: center;
@@ -48,21 +45,36 @@
   &:hover {
     box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.55);
   }
+  img {
+  max-width:100% !important;
+  height:auto;
+  display:block;
+  }
 }
 
 .card-description {
   position: absolute;
   font-size: 20px;
-  bottom: 10px;
-  left: 10px;
+  bottom: 10%;
+  left: 10%;
 }
 
 .container-footer {
   margin-top: 30px;
+  margin-bottom: 60px;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #logo {
   height: 150px;
+  display:block;
+  margin:auto;
+}
+
+@media screen and (max-width: 480px) {
+  .banner {
+    width: 100% !important;
+  }
 }
