bootstraped new cocktail form and added a trash bin to delete dose

--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -1,1 +1,10 @@
+.container {
+  padding-top: 80px;
+  padding-bottom: 40px;
+  width: 80%;
+}
 
+.form-group {
+  width: 50%;
+  padding-top: 20px;
+}
