--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,12 @@
-<div class="form">
-  <%= simple_form_for @cocktail do |f| %>
-  <%= f.input :name %>
-  <%= f.input :photos, as: :attachinary %>
-  <%= f.submit %>
-  <% end %>
+<div class="container">
+  <h3>Create a new cocktail</h3>
+  <div class="form-input">
+    <%= simple_form_for @cocktail do |f| %>
+    <%= f.input :name, label: false, placeholder: 'Cocktail name', error: 'Please add a cocktail name', class: 'form-control' %>
+  </div>
+  <div class="form-actions">
+    <%= f.input :photos, as: :attachinary %>
+    <%= f.button :submit, class: "btn btn-success" %>
+  </div>
+    <% end %>
 </div>
